--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>My name is Jaswanth</h1>
+    <h2>This is type2 heading</h2>
+    <h3>This is type3 heading</h3>
 </body>
 </html>
