added all heading tags

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>My name is Jaswanth</h1>
     <h2>This is type2 heading</h2>
     <h3>This is type3 heading</h3>
+    <h4>This is type4 heading</h4>
+    <h5>This is type4 heading</h5>
+    <h6>This is type4 heading</h6>
 </body>
 </html>
